--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "url": "https://github.com/tmpfs/osteothai-school.git"
   },
   "scripts": {
-    "lint": "standard src/assets/js/*.js"
+    "start": "yarn build && webpack-dev-server",
+    "js": "webpack",
+    "clean": "rm -rf build",
+    "prebuild": "yarn clean && yarn js && mkdir -p build/assets/js && cp -R ./public/* build",
+    "postbuild": "rm build/layout.html",
+    "build": "pug src --out build",
+    "stage": "makestatic -o build --deploy --env stage --provider s3",
+    "prod": "makestatic -o build --deploy --env production --provider s3"
   },
-  "dependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.3.2",
-    "json-loader": "^0.5.7",
+  "dependencies": {},
+  "devDependencies": {
     "makestatic-archive-zip": "^1.0.2",
     "makestatic-audit-files": "^1.0.8",
     "makestatic-build-version": "^1.0.3",
@@ -35,12 +39,10 @@
     "makestatic-validate-html": "^1.2.6",
     "makestatic-verify-id": "^1.0.9",
     "makestatic-verify-link": "^1.1.14",
-    "postcss-loader": "^2.0.9",
-    "raw-loader": "^0.5.1",
-    "reshape-loader": "makestatic/reshape-loader#webpack2",
-    "source-loader": "^0.2.0",
-    "swipejs": "^2.2.4",
-    "webpack": "^4",
-    "webpack-dev-server": "^3.1.4"
+
+    "pug-cli": "^1.0.0-alpha6",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   }
 }
